# libmodbus-cmake

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  libmodbus.pc.in
cmake/: AutoconfHelper.cmake  GitUtils.cmake  LICENSE.TXT  LibModbusAutoconfVersion.cmake
patches/: 0001-remove-msvc-ssize_t-typdef.patch  0002-exports-libmodbus-version-extern-variables.patch
patches/epsilonrt/: 0001-add-modbus_rtu_recv_filter.patch
src/: CMakeLists.txt  modbus.rc.in
tests/: CMakeLists.txt  random-test-server.c  unit-test-client.c  unit-test-server.c  unit-test.h.in
